--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body{
     display: flex;
     justify-content: center;
     padding: 16px;
-    margin-top: 30px;
+    margin-top: 5px;
 }
 
 button{
@@ -51,4 +51,10 @@ button{
 .grid-item{
     background-color: cadetblue;
     border-radius: 12px;
+}
+
+.announcement{
+    display: flex;
+    height: 30px;
+    width: auto;
 }
