--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 32px;
+    gap: 16px;
 }
 
 .header{
@@ -15,8 +15,7 @@ body{
     color: #EB5A54;
     display: flex;
     justify-content: center;
-    padding: 16px;
-    margin-top: 5px;
+    padding: 12px;
 }
 
 button{
@@ -24,10 +23,11 @@ button{
     border: none;
     width: 120px;
     height: 50px;
-    border: 2px solid red;
+    border: 3px solid red;
     font-size: 16px;
     font-weight: 700;
     font-family: 'Times New Roman', Times, serif;
+    border-radius: 16px;
 }
 
 .game-settings{
@@ -45,11 +45,11 @@ button{
 }
 
 .grid-container div{
-    border: 5px solid white;
+    border: 5px solid black;
 }
 
 .grid-item{
-    background-color: cadetblue;
+    background-color: beige;
     border-radius: 12px;
 }
 
@@ -57,4 +57,16 @@ button{
     display: flex;
     height: 30px;
     width: auto;
+}
+
+.redvsblue{
+    font-size: 32px;
+    font-weight: 700;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+.footer{
+    margin-top: 32px;
+    font-size: 20px;
+
 }
